# networking-nec

./: .coveragerc  .gitignore  .gitreview  .pylintrc  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.md  README.rst  plugin.sh  settings
devstack/lib/: nec_plugin  nwa_plugin
doc/source/: conf.py  configurations.rst  contributing.rst  devstack.rst  index.rst  installation.rst  readme.rst  settings.rst  source_code.rst  tips.rst  usage.rst
doc/source/nwa/: devstack.rst  installation.rst  readme.rst  settings.rst
doc/source/openflow/: devstack.rst  installation.rst  readme.rst  settings.rst
etc/neutron/plugins/nec/: necnwa.ini  resource_group.json
networking_nec/: __init__.py  i18n.py
networking_nec/cli/openflow/: __init__.py  packetfilter.py
networking_nec/client/openflow/: packetfilter.py
networking_nec/cmd/eventlet/: nwa_agent.py
networking_nec/cmd/eventlet/plugins/: nec_neutron_agent.py  neutron_necnwa_agent.py  nwa_agent.py
networking_nec/common/: utils.py
networking_nec/db/migration/alembic_migrations/: env.py
networking_nec/nwa/agent/: nwa_agent.py  proxy_fwaas.py  proxy_l2.py  proxy_l3.py  proxy_lbaas.py  proxy_tenant.py  server_manager.py
networking_nec/nwa/common/: config.py  constants.py  exceptions.py  utils.py
networking_nec/nwa/fwaas/: db_api.py  fwaas.py
networking_nec/nwa/fwaas/rpc/: agent_api.py  agent_callback.py  server_api.py  server_callback.py
networking_nec/nwa/l2/: db_api.py  models.py  plugin.py  utils.py
networking_nec/nwa/l2/drivers/: mech_necnwa.py
networking_nec/nwa/l2/rpc/: ml2_server_callback.py  nwa_agent_api.py  nwa_agent_callback.py  nwa_l2_server_callback.py  nwa_proxy_api.py  nwa_proxy_callback.py  tenant_binding_api.py  tenant_binding_callback.py
networking_nec/nwa/l3/: db_api.py  plugin.py
networking_nec/nwa/l3/rpc/: nwa_l3_proxy_api.py  nwa_l3_proxy_callback.py  nwa_l3_server_api.py  nwa_l3_server_callback.py
networking_nec/nwa/lbaas/: lbaas.py
networking_nec/nwa/lbaas/rpc/: api.py  callback.py
networking_nec/nwa/nwalib/: client.py  client_fwaas.py  client_l2.py  client_l3.py  client_lbaas.py  client_tenant.py  data_utils.py  exceptions.py  nwa_restclient.py  restclient.py  semaphore.py  workflow.py
networking_nec/openstack/common/: _i18n.py  loopingcall.py
networking_nec/plugins/necnwa/: constants.py  exceptions.py  necnwa_core_plugin.py  necnwa_fwaas.py  necnwa_lbaas_driver.py  necnwa_plugin.py  necnwa_utils.py
networking_nec/plugins/necnwa/agent/: agent_base_driver.py  base_driver.py  necnwa_agent_rpc.py  necnwa_fwaas_agent_driver.py  necnwa_fwaas_callback.py  necnwa_lbaas_agent_driver.py  necnwa_lbaas_callback.py  necnwa_neutron_agent.py  nwa_agent.py  nwa_l2_network.py  proxy_fwaas.py  proxy_l2.py  proxy_l3.py  proxy_tenant.py  server_manager.py
networking_nec/plugins/necnwa/common/: config.py  constants.py  exceptions.py  utils.py
networking_nec/plugins/necnwa/db/: api.py  models.py
networking_nec/plugins/necnwa/fwaas/: db_api.py  fwaas.py  models.py
networking_nec/plugins/necnwa/l2/: db_api.py  models.py  plugin.py  utils.py
networking_nec/plugins/necnwa/l3/: db_api.py  plugin.py  utils.py
networking_nec/plugins/necnwa/lbaas/: lbaas.py
networking_nec/plugins/necnwa/nwalib/: client.py  data_utils.py  exceptions.py  nwa_restclient.py  restclient.py  semaphore.py  workflow.py
networking_nec/plugins/openflow/: config.py  constants.py  l2manager.py  nec_plugin.py  nec_router.py  ofc_client.py  ofc_manager.py  packet_filter.py  plugin.py  portbindings.py  router.py  router_drivers.py  rpc.py  utils.py
networking_nec/plugins/openflow/agent/: l2_agent.py  (+1 more)
networking_nec/tests/: base.py
networking_nec/tests/necnwa/: test_necnwa_core_plugin.py  test_necnwa_plugin.py  test_necnwa_utils.py
rpm/: neutron-necnwa-agent.service  neutron-necnwa-cleanup  neutron-necnwa-cleanup.service
tools/: coding-checks.sh  pretty_tox.sh  tox_install.sh
(+152 files in other folders)
