[metadata]
name = networking-nec
summary = Neutron plugins/drivers for NEC networking products
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_nec
data_files =
    etc/neutron/plugins/nec = etc/neutron/plugins/nec/necnwa.ini

[entry_points]
console_scripts =
    neutron-necnwa-agent = networking_nec.cmd.eventlet.plugins.nwa_agent:main
neutron.core_plugins =
    necnwa = networking_nec.plugins.necnwa.l2.plugin:NECNWAL2Plugin
neutron.ml2.mechanism_drivers =
    necnwa = networking_nec.plugins.necnwa.l2.drivers.mech_necnwa:NECNWAMechanismDriver
neutron.db.alembic_migrations =
    networking-nec = networking_nec.db.migration:alembic_migrations

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_nec/locale
domain = networking_nec

[update_catalog]
domain = networking_nec
output_dir = networking_nec/locale
input_file = networking_nec/locale/networking_nec.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_nec/locale/networking_nec.pot

[wheel]
universal = 1
